--- a/p5/Mandelbrot/index.html
+++ b/p5/Mandelbrot/index.html
@@ -13,7 +13,9 @@
 
   </head>
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+        <canvas id="myChart"></canvas>
+    </div>
     <script src="sketch.js"></script>
     <script src="population.js"></script>
     <script src="graph.js"></script>
